Fix forms layout issue.

--- a/styles/form.css
+++ b/styles/form.css
@@ -1,7 +1,7 @@
 form {
     display: block;
     width: 400px;
-    margin: 50px auto 5px auto;    
+    margin: 50px;    
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 20px;
